CHANGES
=======

* Fix unicode handling or lack thereof with python 2.7

0.1.1
-----
* Fix pbr min version

0.1.0
-----
* Initial release
* Initial commits